--- a/parts/res/xml/dirac_settings.xml
+++ b/parts/res/xml/dirac_settings.xml
@@ -52,5 +52,12 @@
             android:summary="@string/dirac_hifi_summary"/>
 
     </PreferenceCategory>
-
+    <ListPreference
+        android:key="scenario_selection"
+        android:entries="@array/scenario_selector_titles"
+        android:entryValues="@array/scenario_selector_values"
+        android:defaultValue="4"
+        android:title="@string/music_headset_scenario_select"
+        android:summary="%s"
+        android:icon="@drawable/ic_scenes" />
 </PreferenceScreen>
