--- a/parts/res/xml/doze_settings.xml
+++ b/parts/res/xml/doze_settings.xml
@@ -27,10 +27,10 @@
     <SwitchPreference
         android:key="always_on_display"
         android:disableDependentsState="true"
+        android:icon="@drawable/ic_doze_aod"
         android:title="@string/ambient_display_always_on_title"
         android:summary="@string/ambient_display_always_on_summary"
-        android:persistent="false"
-        android:icon="@drawable/ic_eye" />
+        android:persistent="false" />
 
     <PreferenceCategory
         android:key="pickup_sensor"
@@ -52,16 +52,16 @@
         <SwitchPreference
             android:key="gesture_hand_wave"
             android:defaultValue="false"
+            android:icon="@drawable/ic_doze_hand"
             android:title="@string/hand_wave_gesture_title"
-            android:summary="@string/hand_wave_gesture_summary"
-            android:icon="@drawable/ic_hand" />
+            android:summary="@string/hand_wave_gesture_summary" />
 
         <SwitchPreference
             android:key="gesture_pocket"
             android:defaultValue="false"
+            android:icon="@drawable/ic_doze_pocket"
             android:title="@string/pocket_gesture_title"
-            android:summary="@string/pocket_gesture_summary"
-            android:icon="@drawable/ic_pocket" />
+            android:summary="@string/pocket_gesture_summary" />
 
     </PreferenceCategory>
 
