--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -17,8 +17,9 @@
  */
 -->
 <resources>
-
     <!-- Set the automatic brightness mode on by default -->
     <bool name="def_screen_brightness_automatic_mode">true</bool>
 
+    <!-- 60 seconds for default screen timeout -->
+    <integer name="def_screen_off_timeout">60000</integer>
 </resources>
