--- a/resource-overlay/lavender/Frameworks/res/values/config.xml
+++ b/resource-overlay/lavender/Frameworks/res/values/config.xml
@@ -403,6 +403,17 @@
         <item>activity_manager/use_compaction=true</item>
     </string-array>
     
+    <!-- Flag indicating whether the surface flinger has limited
+         alpha compositing functionality in hardware.  If set, the window
+         manager will disable alpha trasformation in animations where not
+         strictly needed. -->
+    <bool name="config_sf_limitedAlpha">true</bool>
+
+    <!-- Enables or disables fading edges when marquee is enabled in TextView.
+         Off by default, since the framebuffer readback used to implement the
+         fading edges is prohibitively expensive on most GPUs. -->
+    <bool name="config_ui_enableFadingMarquee">true</bool>
+    
     <!-- Disable this if your device does not support input_suspend or charging_enabled -->
     <bool name="config_deviceHasBatteryLifeSaver">true</bool>
     <!-- Use /sys/class/power_supply/battery/charging_enabled with inverted values for old devices-->
