--- a/resource-overlay/lavender/Frameworks/res/values/config.xml
+++ b/resource-overlay/lavender/Frameworks/res/values/config.xml
@@ -409,4 +409,8 @@
     <string name="config_batteryLifeSaverSysfsNode" translatable="false">/sys/class/power_supply/battery/charging_enabled</string>
     <string name="config_batteryLifeSaverSysfsNodeStopValue" translatable="false">0</string>
     <string name="config_batteryLifeSaverSysfsNodeStartValue" translatable="false">1</string>
+    
+    <!-- The default value for whether head tracking for
+         spatial audio is enabled for a newly connected audio device -->
+    <bool name="config_spatial_audio_head_tracking_enabled_default">true</bool>
 </resources>
